--- a/askbot/locale/ru/LC_MESSAGES/django.po
+++ b/askbot/locale/ru/LC_MESSAGES/django.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 # alexander85774618fd8f4e5f, 2012
 # alexander85774618fd8f4e5f, 2012
@@ -4402,8 +4402,8 @@ msgstr "%(reputation)s кармы %(username)s "
 #, python-format
 msgid "one gold badge"
 msgid_plural "%(count)d gold badges"
-msgstr[0] "<span class=\"hidden\">%(count)d</span>золотая медаль"
-msgstr[1] "%(count)d золотых медалей"
+msgstr[0] "одна золотая медаль"
+msgstr[1] "%(count)d золотых медали"
 msgstr[2] "%(count)d золотых медалей"
 msgstr[3] "%(count)d золотых медалей"
 
@@ -4411,8 +4411,8 @@ msgstr[3] "%(count)d золотых медалей"
 #, python-format
 msgid "one silver badge"
 msgid_plural "%(count)d silver badges"
-msgstr[0] "<span class=\"hidden\">%(count)d</span>серебряная медаль"
-msgstr[1] "%(count)d серебряных медалей"
+msgstr[0] "одна серебряная медаль"
+msgstr[1] "%(count)d серебряных медали"
 msgstr[2] "%(count)d серебряных медалей"
 msgstr[3] "%(count)d серебряных медалей"
 
@@ -4420,8 +4420,8 @@ msgstr[3] "%(count)d серебряных медалей"
 #, python-format
 msgid "one bronze badge"
 msgid_plural "%(count)d bronze badges"
-msgstr[0] "<span class=\"hidden\">%(count)d</span>бронзовая медаль"
-msgstr[1] "%(count)d бронзовых медалей"
+msgstr[0] "одна бронзовая медаль"
+msgstr[1] "%(count)d бронзовых медали"
 msgstr[2] "%(count)d бронзовых медалей"
 msgstr[3] "%(count)d бронзовых медалей"
 
